@@ -29,6 +29,7 @@
   *  - Fixed RNDISEthernet demos crashing when calculating checksums for Ethernet/TCP packets of more than ~500 bytes due to
   *    an overflow in the checksum calculation loop (thanks to Kevin Malec)
   *  - Fixed XPLAINBridge project not correctly reading the XMEGA's supply voltage when reporting back to the host
+  *  - Fixed incorrect signature for the ATMEGA32U2 in the DFU bootloader (thanks to Axel Rohde)
   *
   *  \section Sec_ChangeLog100513 Version 100513
   *  <b>New:</b>
